# web_scraper_legal

./: .env.example  .env.sample  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PDF_RAG_SYSTEM.md  WINDOWS_SETUP.md  docker-compose.yml  gpu_config.txt  project-structure.md  pyproject.toml  readme.md  requirements.txt  run.py
.claude/agents/: database-architect.md  documentation-updater.md  flask-api-architect.md  frontend-specialist.md  product-research-agent.md  qa-test-engineer.md
.claude/commands/: PLan.md  bootstrap.md  prime.md
.github/workflows/: tests.yml
dawson_scraper/src/: __init__.py  api_client.py  batch_pdf_processor.py  cli_rag.py  config.py  database.py  downloader.py  models.py  pdf_pipeline.py  rag_system.py  scraper.py  utils.py  utils_logging_patch.py
legal_rag/: README.md  __init__.py  requirements.txt
legal_rag/src/: __init__.py  advanced_rag_system.py  cli.py  config.py  docling_processor.py  embedding_manager.py  milvus_manager.py
specs/: api_contracts.md  database_schema.md  module_overview.md  project_overview.md  project_structure.md  setup_guide.md  tech_stack.md
