[project]
name = "dawson-court-scraper"
version = "3.1.0"
description = "US Tax Court opinion scraper with parallel document downloads and advanced PDF processing via IBM Docling"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tax-court", "scraper", "pdf", "docling", "ocr", "document-processing", "vlm", "dawson-api", "legal-documents"]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "PyPDF2>=3.0.0",
    "python-dateutil>=2.8.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "flake8>=6.0.0",
]
# Advanced PDF processing with Docling and LlamaIndex
# Note: On Windows, install Microsoft C++ Build Tools first:
# https://visualstudio.microsoft.com/visual-cpp-build-tools/
pdf-processing = [
    "docling",
    "docling-core",
    "docling-ibm-models",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "llama-index>=0.9.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-core>=0.9.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    "nest-asyncio>=1.5.0",
]
# OCR support for enhanced PDF text extraction
ocr = [
    "rapidocr-paddle>=1.3.0",
]
# GPU acceleration support (CUDA 11.8)
cuda118 = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "bitsandbytes>=0.41.0",
]
# All Docling features including OCR and GPU support
docling-all = [
    "rapidocr-paddle>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "bitsandbytes>=0.41.0",
    "docling",
    "docling-core",
    "docling-ibm-models",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "llama-index>=0.9.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-core>=0.9.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    "nest-asyncio>=1.5.0",
]

[project.scripts]
dawson = "run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "dawson_scraper/src"}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "YTT", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true